--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ ImageMagick-6.4.0-multilib.patch
 /ImageMagick-6.9.1-3.tar.bz2
 /ImageMagick-6.9.2-7.tar.xz
 /ImageMagick-6.9.3-0.tar.xz
+/ImageMagick-6.9.9-3.tar.xz
